...
                android:gravity="left|center_vertical"
                android:lines="1"
                android:text=""
                android:textColor="?attr/textButtonUiColor"
                android:clickable="true"
                android:textSize="@dimen/player_radio_band_text_size_portrait"
                app:layout_constraintBaseline_toBaselineOf="@+id/pch_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/channel_number_text" />

            <TextView
                android:id="@+id/pre_pch_text"
...
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                autofit:minTextSize="@dimen/min_text_size_32"/>

            <ImageView
                android:id="@+id/favorite_view"
                android:layout_width="@dimen/player_radio_pty_search_icon_width"
                android:layout_height="@dimen/player_radio_pty_search_icon_width"
                android:layout_marginBottom="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/button_favorite_off"
                android:tint="?attr/uiColor"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/antenna_frame">

        <include
            android:id="@+id/source_button"
            layout="@layout/element_player_button_left"
            android:layout_width="@dimen/player_music_large_button_width"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/player_music_large_button_margin"
            android:layout_marginBottom="@dimen/player_streaming_large_button_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="@+id/guideline_left" />


        <include
            android:id="@+id/visualizer_button"
            layout="@layout/element_player_button_center_mini_vis"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/left_center_group"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
...
                    android:tint="?attr/uiColor" />
            </FrameLayout>
        </android.support.constraint.ConstraintLayout>


        <include
            android:id="@+id/fx_button"
            layout="@layout/element_player_button_center_mini"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/right_center_group"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_center"
...
                    android:src="@drawable/p0319_iconbtn_1nrm"
                    android:tint="?attr/uiColor" />
            </FrameLayout>
        </android.support.constraint.ConstraintLayout>

        <include
            android:id="@+id/list_button"
            layout="@layout/element_player_button_right"
            android:layout_width="@dimen/player_music_large_button_width"
            android:layout_height="0dp"
            android:layout_marginRight="@dimen/player_music_large_button_margin"
            android:layout_marginBottom="@dimen/player_streaming_large_button_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
...
