...
    <string name="ply_042">PTY Search</string>
    <string name="ply_043">News info</string>
    <string name="ply_044">Popular</string>
    <string name="ply_045">Classics</string>
    <string name="ply_046">Others</string>
    <string name="ply_047">Cancel </string>
    <string name="ply_048">FM1</string>
    <string name="ply_049">FM2</string>
    <string name="ply_050">FM3</string>
    <string name="ply_051">SW1</string>
    <string name="ply_052">SW2</string>
    <string name="ply_053">S.Todoroki</string>
    <string name="ply_054">P.CH</string>
...
    <string name="ads_004">Pedestrian Collision</string>
    <string name="ads_005">Lane Keep</string>
    <string name="unt_001">km/h</string>
    <string name="unt_002">mph</string>
    <string name="unt_003">m</string>
    <string name="unt_004">ft</string>
    <string name="unt_005">MHz</string>
    <string name="unt_006">kHz</string>
    <string name="url_001">en-us</string>
    <string name="url_002">en-us</string>
    <string name="url_003">en</string>
    <string name="alx_001">Listening…</string>
    <string name="alx_002">Thinking…</string>
...
