...
            android:textColor="@color/text_color_state"
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/element_list_item_title_text_size"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/frequency_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="2dp"
        android:layout_alignParentBottom="true"
...
