<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#000000">
    <ImageView
        android:id="@+id/splash_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_002"
        android:scaleType="centerInside"/>
    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/tips_indicator_color"
        android:background="@drawable/p0935_android_tabbar"
        android:layoutDirection="ltr"
        app:tabMode="fixed"
        app:tabGravity="fill"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout"
        android:divider="@color/tips_divider_color"
        android:dividerHeight="0dp"/>
    <ImageButton
        android:id="@+id/bt_button"
        android:layout_width="@dimen/tips_button_width"
        android:layout_height="@dimen/tips_button_width"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="2dp"
        android:src="@drawable/p1170_btn_bt"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="fitCenter"/>
    <ImageButton
        android:id="@+id/set_button"
        android:layout_width="@dimen/tips_button_width"
        android:layout_height="@dimen/tips_button_width"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="2dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/p0910_btn_setting"
        android:scaleType="fitCenter"/>

</RelativeLayout>